refactor: ImageCreate, Delete, Update 수정